feat(board): 메인, 카테고리 별 뉴, 핫 url 정리

--- a/project/board/templates/board/main_board.html
+++ b/project/board/templates/board/main_board.html
@@ -68,14 +68,14 @@
 
     <div class="board__pannel__top container pc__board">
         <div class="pannel__top__state">
-            <a href="{% url 'core:board:main_board' univ.url_name %}?state=new">
+            <a href="{{ new_url }}">
                 {% if state == 'new' %}
                     <img src="{% static "/svg/버튼2.svg" %}">
                 {% else %}
                     <img src="{% static "/svg/버튼3.svg" %}">
                 {% endif %}
             </a>
-            <a href="{% url 'core:board:main_board' univ.url_name %}?state=hot">
+            <a href="{{ hot_url }}">
                 {% if state == 'hot' %}
                     <img src="{% static "/svg/버튼4.svg" %}">
                 {% else %}
@@ -197,14 +197,14 @@
     <div class="board__pannel__top container mobile__board">
         <div class="pannel__top__state">
 
-            <a href="{% url 'core:board:main_board_new' univ.url_name %}">
+            <a href="{{ new_url }}">
                 {% if state == 'new' %}
                     <img src="{% static "/svg/버튼2.svg" %}">
                 {% else %}
                     <img src="{% static "/svg/버튼3.svg" %}">
                 {% endif %}
             </a>
-            <a href="{% url 'core:board:main_board' univ.url_name %}">
+            <a href="{{ hot_url }}">
                 {% if state == 'hot' %}
                     <img src="{% static "/svg/버튼4.svg" %}">
                 {% else %}
@@ -338,7 +338,7 @@
                 //ajax
 
                 const req = new XMLHttpRequest();
-                req.open("POST", "{% url "core:board:main_board" url_name %}");
+                req.open("POST", "{% url "core:board:main_board" univ.url_name %}");
                 req.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
                 req.setRequestHeader('X-Requested-With', 'XMLHttpRequest');
                 req.send(`requestPage=${currentPage++}&csrfmiddlewaretoken={{ csrf_token }}`)
