--- a/project/board/static/board/css/board_header/board_header_mobile.css
+++ b/project/board/static/board/css/board_header/board_header_mobile.css
@@ -2,10 +2,19 @@
     display: none!important;
 }
 
+.base__header {
+    margin: 0;
+    height: 3.2rem;
+}
+
+.container {
+    padding-right: 5px;
+}
+
 .board__header__right {
     display: flex;
     align-items: center;
-    width: 20%;
+    width: 25%;
 }
 
 .board__header__right li {
@@ -23,6 +32,7 @@
 
 .board__buttons img{
     height: 25px;
+    width: 90%;
 }
 
 #h__post {
@@ -62,4 +72,43 @@
 
 .board__header__search button img {
     width: 18px;
+}
+
+.header__wrap {
+    width: 100%;
+}
+
+.header__main {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.header__logo img {
+    height: 30px;
+}
+
+.header__dropdown {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+}
+
+.header__dropdown div {
+    padding-left: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: 100%;
+    height: 2.8rem;
+    background-color: white;
+}
+
+.header__drop__search {
+    margin-top: 5px;
+}
+
+#h_h {
+    transition: height 1s, width 1s, padding 1s, visibility 1s, opacity 0.5s ease-out;
 }
