--- a/project/board/static/board/css/board_post/board_post_mobile.css
+++ b/project/board/static/board/css/board_post/board_post_mobile.css
@@ -6,6 +6,7 @@
     display: flex;
     flex-direction: column-reverse;
     padding: 0!important;
+
 }
 
 .board__pannel__top {
@@ -13,10 +14,54 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    margin-top: 0.3rem;
+    padding: 0 0.3rem!important;
+    height: 2rem;
 }
 
 .pannel__top__state {
-    width: 180px;
+    width: 37%;
+    height: 98%;
+}
+
+.pannel__top__category {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: white;
+    width: 62%;
+    height: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 5px;
+    z-index: 1;
+}
+
+.top__category__face {
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    width: 75%;
+    background-color: #9cd0c1;
+    color: white;
+    height: 80%;
+    border-radius: 3px;
+}
+
+#m_category {
+    margin-top:1%;
+    height: 80%!important;
+    width: 20px;
+    margin-left:auto;
+    margin-right:auto;
+}
+
+#m_drop {
+    height: 60%!important;
+    width: 20px;
+    margin-left:auto;
+    margin-right:auto;
+
 }
 
 .board__pannel__top a {
@@ -26,7 +71,8 @@
 }
 
 .board__pannel__top img {
-    width: 80px;
+    width: 50%;
+    height:100%;
 }
 
 .board__pannel__left {
